# vscode-project-templates

./: .gitignore  LICENSE  README.md
MSys2 CMake C Project/: CMakeLists.txt
MSys2 CMake C Project/src/: main.c
MSys2 CMake C++ Project/: .gitignore  CMakeLists.txt
doc/: README.md  README_fr.md
doc/fr/: README_INSTALL_WIN.md
